...
    val canAuthenticate: Boolean = false,
    val memkeys: Boolean = true,
    val connectionAlerts: Boolean = true,
    val notificationsAvailable: Boolean = true,
    val wifilock: Boolean = true,
    val backupkeys: Boolean = false,
    val scrollback: String = "140",
    val rotation: String = "Default",
    val titlebarhide: Boolean = false,
    val fullscreen: Boolean = false,
    val pgupdngesture: Boolean = false,
    val swipeSessions: Boolean = false,
    val volumefont: Boolean = true,
...
